Implementação dos services e controller do projeto, endpoints disponibilizados e ajustados no yaml.
