# src/main/resources/static/openapi.yaml
@@ -26,6 +26,26 @@ paths:
         - Projeto
       summary: Lista todos os projetos
       description: Lista de projetos
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 20
+        - name: sort
+          in: query
+          required: false
+          schema:
+            type: string
+            example: nome,asc
+            default: id
       responses:
         '200':
           description: Successful operation
@@ -64,8 +84,13 @@ paths:
                 status:
                   $ref: '#/components/schemas/StatusProjeto'
                 responsavelId:
-                  type: integer
-                  format: int64
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        format: int64
                 dtInicioPrevisto:
                   type: string
                   format: date
@@ -169,8 +194,14 @@ paths:
                 status:
                   $ref: '#/components/schemas/StatusProjeto'
                 responsavelId:
-                  type: integer
-                  format: int64
+                  type: array
+                  items:
+                    type: integer
+                    format: int64
+                    properties:
+                      id:
+                        type: integer
+                        format: int64
                 dtInicioPrevisto:
                   type: string
                   format: date
@@ -183,6 +214,11 @@ paths:
                 dtTerminoRealizado:
                   type: string
                   format: date
+                diasAtraso:
+                  type: integer
+                percentualTempoRestante:
+                  type: number
+                  format: float
         required: true
       responses:
         '200':
@@ -322,6 +358,7 @@ paths:
           description: Campo para ordenação
           schema:
             type: string
+            default: id
       responses:
         '200':
           description: Successful operation
@@ -887,10 +924,38 @@ components:
     ListaProjetoResponse:
       type: object
       properties:
-        listaProjetos:
+        content:
           type: array
           items:
             $ref: '#/components/schemas/Projeto'
+        pageable:
+          type: object
+          properties:
+            pageNumber:
+              type: integer
+            pageSize:
+              type: integer
+            offset:
+              type: integer
+        totalElements:
+          type: integer
+        totalPages:
+          type: integer
+        last:
+          type: boolean
+        size:
+          type: integer
+        number:
+          type: integer
+        sort:
+          type: string
+          default: id
+        first:
+          type: boolean
+        numberOfElements:
+          type: integer
+        empty:
+          type: boolean
 
     Projeto:
       type: object
@@ -917,6 +982,11 @@ components:
         dtTerminoRealizado:
           type: string
           format: date
+        diasAtraso:
+          type: integer
+        percentualTempoRestante:
+          type: number
+          format: float
 
     Usuario:
       type: object
